More and more themes, fixed zooming issues on mobile

--- a/src/web/style/parchment-theme.less
+++ b/src/web/style/parchment-theme.less
@@ -4,7 +4,16 @@
 @thick-width: 0.3em;
 
 body {
+  color: #101010;
+}
+
+.sidebar {
+  background: url(../img/26-stained-parchment-background-lrg.jpg);
+  background-repeat: repeat;
+}
+
+#output-box {
   background: url(../img/pale-stained-parchment-background-lrg.jpg);
   background-repeat: repeat;
-  color: #101010;
+  min-height: 100%;
 }
