--- a/src/web/style/telnet-theme.less
+++ b/src/web/style/telnet-theme.less
@@ -2,6 +2,7 @@
 
 body {
   font-family: monaco, "Courier New", Courier, monospace;
+  font-weight: 700;
 }
 
 .block span {
