--- a/src/web/style/umbra-tags.less
+++ b/src/web/style/umbra-tags.less
@@ -263,20 +263,7 @@
 .ui.table th {
   padding: 3px 3px;
 }
-/*
 
-This class doesn't seem to be used anymore
-
-.message {
-  color: rgb(229,229,229);
-  margin: 5px;
-  float: left;
-  clear: both;
-  padding-left: 20px;
-}
-
-
-*/
 .block span {
   border-radius: 5px;
 }
